# django-pneumatic

./: .gitignore  .releaserc.json  Makefile  README.md  main.py  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: pull_request.yml  release.yml  test.yml
pneumatic/: apps.py  config.py  decorators.py  exceptions.py  executor.py  models.py  registry.py  scheduler.py  types.py
pneumatic/migrations/: 0001_initial.py
tests/: settings.py  test_config.py  test_executor.py  test_models.py  test_registry.py  test_scheduler.py
