[project]
name = "django-pneumatic"
version = "1.0.0"
description = "The reusable inbox and outbox pattern library for Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "ruff>=0.15.2",
    "ty>=0.0.17",
]
